--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,46 @@
-version: "3.8"
-
 services:
+  proxy:
+    image: traefik:v2.11
+    command: --providers.docker
+    ports:
+      - 80:80
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  backend:
+    build:
+      context: ./
+      target: backend-dev
+    develop:
+      watch:
+        - path: ./server/src
+          action: sync
+          target: /usr/local/app/src
+        - path: ./server/package.json
+          action: rebuild
+    volumes:
+      - backend_uploads:/usr/local/app/uploads
+    depends_on:
+      - mongo
+    labels:
+      traefik.http.routers.backend.rule: Host(`localhost`) && PathPrefix(`/api`)
+      traefik.http.services.backend.loadbalancer.server.port: 5000
+
+  client:
+    build:
+      context: ./
+      target: client-dev
+    develop:
+      watch:
+        - path: ./client/src
+          action: sync
+          target: /usr/local/app/src
+        - path: ./client/package.json
+          action: rebuild
+    labels:
+      traefik.http.routers.client.rule: Host(`localhost`)
+      traefik.http.services.client.loadbalancer.server.port: 3000
+
   mongo:
     image: mongo:8.0
     environment:
@@ -15,4 +55,6 @@ services:
 
 volumes:
   mongodata:
+    driver: local
+  backend_uploads:
     driver: local
