Changed authorization to passport library

--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,9 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.3",
+    "@types/passport-github": "^1.1.12",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-local": "^1.0.38",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   },
@@ -32,6 +35,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pdf2pic": "^3.1.3"
   }
 }
