--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
     "target": "ES2020",
     "sourceMap": true,
-    "rootDir": "./src",
+    "rootDir": "./",
     "outDir": "./build"
   }
 }
