--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --poll ./src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
     "test": "jest",
@@ -24,13 +25,17 @@
     "@types/passport-github": "^1.1.12",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^9.9.0",
+    "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "mongodb-memory-server": "^10.1.4",
     "ts-jest": "^29.2.6",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2",
-    "eslint": "^9.9.0"
+    "tsx": "^4.19.3",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
