--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:html": "eslint -f html -o eslint-report.html ."
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^9.9.0",
+    "eslint-formatter-html": "^2.7.2",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
