--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "eslint-formatter-html": "^2.7.2",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
+    "jest-html-reporter": "^4.0.1",
     "jest-junit": "^16.0.0",
     "mongodb-memory-server": "^10.1.4",
     "ts-jest": "^29.2.6",
