--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Run tests with Jest
         run: npm test -- --ci --reporters=default --reporters=jest-junit --reporters=jest-html-reporter
+        continue-on-error: true
 
       - name: Upload Jest test results
         uses: actions/upload-artifact@v4
