Add Playwright testing setup and update CI/CD workflow

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,10 @@ junit.xml
 
 # eslint reports
 eslint-report.html
+
+# Playwright
+node_modules/
+test-results/
+playwright-report/
+blob-report/
+playwright/.cache/
