--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,6 +51,30 @@ jobs:
           name: test-report-html
           path: server/test-report.html
 
+    test_ui:
+      timeout-minutes: 60
+      runs-on: ubuntu-latest
+      defaults:
+      run:
+        working-directory: client
+      steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-node@v4
+          with:
+            node-version: 18
+        - name: Install dependencies
+          run: npm ci
+        - name: Install Playwright Browsers
+          run: npx playwright install --with-deps
+        - name: Run Playwright tests
+          run: npx playwright test
+        - uses: actions/upload-artifact@v4
+          if: ${{ !cancelled() }}
+          with:
+            name: playwright-report
+            path: playwright-report/
+            retention-days: 30
+
   lint:
     name: Run ESLint
     runs-on: ubuntu-latest
