--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,6 +44,67 @@ services:
       traefik.http.routers.client.rule: Host(`localhost`)
       traefik.http.services.client.loadbalancer.server.port: 3000
 
+  # ui-tests:
+  #   image: mcr.microsoft.com/playwright:v1.41.0
+  #   container_name: ui-tests
+  #   build:
+  #     context: ./
+  #     target: ui-tests
+  #   volumes:
+  #     - ./ui-tests/playwright-report:/usr/local/app/playwright-report
+  #   depends_on:
+  #     - client
+  #   command: ["xvfb-run", "npx", "playwright", "test", "--headed"]
+
+  # ui-tests:
+  #   image: mcr.microsoft.com/playwright:v1.41.0
+  #   container_name: ui-tests
+  #   build:
+  #     context: ./
+  #     target: ui-tests
+  #   volumes:
+  #     - ./client:/usr/local/app/client
+  #     - ./client/playwright-report:/usr/local/app/playwright-report
+  #   environment:
+  #     - BASE_URL=http://client:3000
+  #   depends_on:
+  #     - client
+  #     - backend
+  #   command:
+  #     [
+  #       "xvfb-run",
+  #       "npx",
+  #       "playwright",
+  #       "test",
+  #       "--project=chromium",
+  #       "--config=client/playwright.config.ts",
+  #     ]
+
+  ui-tests:
+    # Remove this line as we're building the image from Dockerfile
+    # image: mcr.microsoft.com/playwright:v1.41.0
+    container_name: ui-tests
+    build:
+      context: ./
+      target: ui-tests
+    volumes:
+      - ./client:/usr/local/app/client
+      - ./client/playwright-report:/usr/local/app/playwright-report
+    environment:
+      - BASE_URL=http://client:3000
+    depends_on:
+      - client
+      - backend
+    command:
+      [
+        "xvfb-run",
+        "npx",
+        "playwright",
+        "test",
+        "--project=chromium",
+        "--config=client/playwright.config.ts",
+      ]
+
   mongo:
     image: mongo:8.0
     container_name: ebooks-app-mongo
