--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -94,11 +94,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Set up Docker Compose
+      - name: Install Docker Compose
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker-compose-plugin
-          docker compose version
+          sudo apt-get install -y docker-compose
 
       - name: Build, start containers and run tests
         run: docker-compose up -d
