Refactor UI test workflow to improve service readiness checks and add dependency for client service

--- a/docker-compose.ci.yaml
+++ b/docker-compose.ci.yaml
@@ -26,6 +26,8 @@ services:
     build:
       context: ./
       target: client-dev
+    depends_on:
+      - backend
     labels:
       traefik.http.routers.client.rule: Host(`localhost`)
       traefik.http.services.client.loadbalancer.server.port: 3000
