--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -89,35 +89,51 @@ jobs:
 
       - name: Wait for services to be ready
         run: |
-          echo "Waiting for services to be ready..."
+          # Function to check if a URL is available
+          check_url() {
+            curl --silent --fail --max-time 5 "$1" > /dev/null 2>&1
+            return $?
+          }
 
-          # Function to check if a service is ready
+          # Function to check if a container is running
+          check_container() {
+            docker ps --filter "name=$1" --filter "status=running" --quiet | grep -q .
+            return $?
+          }
+
+          # Function to wait for a service with timeout
           wait_for_service() {
             local service_name="$1"
-            local url="$2"
+            local check_command="$2"
             local max_attempts=30
-            local wait_seconds=5
+            local wait_seconds=2
             
             echo "Waiting for $service_name to be ready..."
             for i in $(seq 1 $max_attempts); do
-              if curl -s -f "$url" > /dev/null; then
-                echo "$service_name is ready!"
+              if eval "$check_command"; then
+                echo "✅ $service_name is ready!"
                 return 0
               fi
+              
               echo "Attempt $i/$max_attempts: $service_name not ready yet, waiting ${wait_seconds}s..."
               sleep $wait_seconds
             done
             
-            echo "Error: $service_name did not become ready in time."
+            echo "❌ Error: $service_name not ready after $(($max_attempts * $wait_seconds)) seconds"
             return 1
           }
 
-          # Check each service
-          wait_for_service "proxy" "http://localhost"
-          wait_for_service "client" "http://localhost"
-          wait_for_service "backend" "http://localhost/api"
+          # First check if all containers are running
+          wait_for_service "proxy container" "check_container ebooks-app-proxy" || exit 1
+          wait_for_service "backend container" "check_container ebooks-app-backend" || exit 1
+          wait_for_service "client container" "check_container ebooks-app-client" || exit 1
+          wait_for_service "mongo container" "check_container ebooks-app-mongo" || exit 1
 
-          echo "All services are ready!"
+          # Then verify services are responding correctly
+          wait_for_service "client service" "check_url http://localhost" || exit 1
+          wait_for_service "backend API" "check_url http://localhost/api/books/genres" || exit 1
+
+          echo "🚀 All services are ready and responding!"
 
       - name: Run UI Tests
         run: |
