--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -137,7 +137,7 @@ jobs:
 
       - name: Run UI Tests
         run: |
-          docker-compose -f docker-compose.ci.yaml up ui-tests --exit-code-from ui-tests
+          docker-compose -f docker-compose.ci.yaml up --exit-code-from ui-tests ui-tests
           test_exit_code=$?
           echo "UI tests completed with exit code: $test_exit_code"
           if [ $test_exit_code -eq 0 ]; then
