--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -137,14 +137,41 @@ jobs:
 
       - name: Run UI Tests
         run: |
-          docker-compose -f docker-compose.ci.yaml --profile test up --exit-code-from ui-tests --build ui-tests
-          test_exit_code=$?
+          # First build the test image
+          docker-compose -f docker-compose.ci.yaml --profile test build ui-tests
+          
+          # Run the tests in detached mode
+          docker-compose -f docker-compose.ci.yaml --profile test up -d ui-tests
+          
+          # Monitor the test container with a timeout (15 minutes)
+          echo "Waiting for UI tests to complete..."
+          start_time=$(date +%s)
+          timeout_seconds=900
+          
+          while docker ps --filter "name=ui-tests" --quiet | grep -q .; do
+            current_time=$(date +%s)
+            elapsed_time=$((current_time - start_time))
+            
+            if [ $elapsed_time -gt $timeout_seconds ]; then
+              echo "⚠️ UI tests timed out after 15 minutes"
+              docker stop ui-tests
+              break
+            fi
+            
+            echo "Tests still running... ($(date +%H:%M:%S))"
+            sleep 10
+          done
+          
+          # Get the exit code from the container
+          test_exit_code=$(docker inspect --format='{{.State.ExitCode}}' ui-tests)
           echo "UI tests completed with exit code: $test_exit_code"
-
-          docker cp ui-tests:/usr/local/app/playwright-report ./
-
+          
+          # Copy test reports from container
+          docker cp ui-tests:/usr/local/app/playwright-report ./ || echo "Failed to copy reports, container may not have generated any"
+          
+          # Set environment variables for artifact upload
           echo "tests_ran=true" >> $GITHUB_ENV
-          if [ $test_exit_code -eq 0 ]; then
+          if [ "$test_exit_code" -eq "0" ]; then
             echo "tests_passed=true" >> $GITHUB_ENV
           else
             echo "tests_passed=false" >> $GITHUB_ENV
