--- a/docker-compose.ci.yaml
+++ b/docker-compose.ci.yaml
@@ -32,29 +32,28 @@ services:
       traefik.http.routers.client.rule: Host(`localhost`)
       traefik.http.services.client.loadbalancer.server.port: 3000
 
-  ui-tests:
-    container_name: ui-tests
-    build:
-      context: ./
-      target: ui-tests
-    volumes:
-      - ./client:/usr/local/app/client
-      - ./client/playwright-report:/usr/local/app/playwright-report
-    environment:
-      - BASE_URL=http://client:3000
-    depends_on:
-      - client
-      - backend
-    command:
-      [
-        "xvfb-run",
-        "npx",
-        "playwright",
-        "test",
-        "--project=chromium",
-        "--config=client/playwright.config.ts",
-      ]
-    profiles: ["test"]
+  # ui-tests:
+  #   container_name: ui-tests
+  #   build:
+  #     context: ./
+  #     target: ui-tests
+  #   volumes:
+  #     - ./client/playwright-report:/usr/local/app/playwright-report
+  #   environment:
+  #     - BASE_URL=http://client:3000
+  #   depends_on:
+  #     - client
+  #     - backend
+  #   command:
+  #     [
+  #       "xvfb-run",
+  #       "npx",
+  #       "playwright",
+  #       "test",
+  #       "--project=chromium",
+  #       "--config=client/playwright.config.ts",
+  #     ]
+  #   profiles: ["test"]
 
   mongo:
     image: mongo:8.0
