--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -61,6 +61,24 @@ jobs:
         with:
           node-version: lts/*
 
+      - name: Create .env file
+        run: |
+          echo "BACKEND_HOST=${{ secrets.BACKEND_HOST }}" >> .env
+          echo "BACKEND_PORT=${{ secrets.BACKEND_PORT }}" >> .env
+          echo "BACKEND_UPLOADED_BOOKS_PATH=${{ secrets.BACKEND_UPLOADED_BOOKS_PATH }}" >> .env
+          echo "BACKEND_UPLOADED_THUMBNAILS_PATH=${{ secrets.BACKEND_UPLOADED_THUMBNAILS_PATH }}" >> .env
+          echo "BACKEND_JWT_SECRET_KEY=${{ secrets.BACKEND_JWT_SECRET_KEY }}" >> .env
+          echo "BACKEND_JWT_EXPIRES_IN=${{ secrets.BACKEND_JWT_EXPIRES_IN }}" >> .env
+          echo "BACKEND_GOOGLE_CLIENT_ID=${{ secrets.BACKEND_GOOGLE_CLIENT_ID }}" >> .env
+          echo "BACKEND_GOOGLE_CLIENT_SECRET=${{ secrets.BACKEND_GOOGLE_CLIENT_SECRET }}" >> .env
+          echo "FRONTEND_HOST=${{ secrets.FRONTEND_HOST }}" >> .env
+          echo "FRONTEND_PORT=${{ secrets.FRONTEND_PORT }}" >> .env
+          echo "MONGO_HOST=${{ secrets.MONGO_HOST }}" >> .env
+          echo "MONGO_PORT=${{ secrets.MONGO_PORT }}" >> .env
+          echo "MONGO_DB=${{ secrets.MONGO_DB }}" >> .env
+          echo "MONGO_USER=${{ secrets.MONGO_USER }}" >> .env
+          echo "MONGO_PASS=${{ secrets.MONGO_PASS }}" >> .env
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -75,15 +93,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: client
-      
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
         working-directory: client
-      
+
       - name: Run Playwright tests
         run: xvfb-run npx playwright test
         working-directory: client
-      
+
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
