--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,14 +25,14 @@ services:
     depends_on:
       - mongo
     labels:
-      traefik.http.routers.backend.rule: Host(`localhost`) && PathPrefix(`/api`)
+      traefik.http.routers.backend.rule: (Host(`localhost`) || Host(`proxy`)) && PathPrefix(`/api`)
       traefik.http.services.backend.loadbalancer.server.port: 5000
 
   client:
     container_name: ebooks-app-client
     build:
       context: ./
-      target: client-dev
+      target: client-test
     develop:
       watch:
         - path: ./client/src
@@ -40,45 +40,11 @@ services:
           target: /usr/local/app/src
         - path: ./client/package.json
           action: rebuild
+    ports:
+      - "3000:3000"
     labels:
-      traefik.http.routers.client.rule: Host(`localhost`)
+      traefik.http.routers.client.rule: Host(`localhost`) || Host(`proxy`)
       traefik.http.services.client.loadbalancer.server.port: 3000
-
-  # ui-tests:
-  #   image: mcr.microsoft.com/playwright:v1.41.0
-  #   container_name: ui-tests
-  #   build:
-  #     context: ./
-  #     target: ui-tests
-  #   volumes:
-  #     - ./ui-tests/playwright-report:/usr/local/app/playwright-report
-  #   depends_on:
-  #     - client
-  #   command: ["xvfb-run", "npx", "playwright", "test", "--headed"]
-
-  # ui-tests:
-  #   image: mcr.microsoft.com/playwright:v1.41.0
-  #   container_name: ui-tests
-  #   build:
-  #     context: ./
-  #     target: ui-tests
-  #   volumes:
-  #     - ./client:/usr/local/app/client
-  #     - ./client/playwright-report:/usr/local/app/playwright-report
-  #   environment:
-  #     - BASE_URL=http://client:3000
-  #   depends_on:
-  #     - client
-  #     - backend
-  #   command:
-  #     [
-  #       "xvfb-run",
-  #       "npx",
-  #       "playwright",
-  #       "test",
-  #       "--project=chromium",
-  #       "--config=client/playwright.config.ts",
-  #     ]
 
   ui-tests:
     container_name: ui-tests
@@ -86,22 +52,15 @@ services:
       context: ./
       target: ui-tests
     volumes:
-      - ./client:/usr/local/app/client
       - ./client/playwright-report:/usr/local/app/playwright-report
+      - ./client/test-results:/usr/local/app/test-results
+      - ./client/tests:/usr/local/app/tests
     environment:
-      - BASE_URL=http://client:3000
-    depends_on:
-      - client
-      - backend
-    command:
-      [
-        "xvfb-run",
-        "npx",
-        "playwright",
-        "test",
-        "--project=chromium",
-        "--config=client/playwright.config.ts",
-      ]
+      - DISPLAY=:99
+      - BASE_URL=http://proxy
+      - DEBUG=pw:api
+      - CI=true
+    shm_size: 2gb
     profiles: ["test"]
 
   mongo:
