--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -90,23 +90,23 @@ jobs:
       - name: Build and start containers
         run: docker-compose -f docker-compose.ci.yaml up -d
 
-      - name: Install dependencies
-        run: npm ci
-        working-directory: client
-
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-        working-directory: client
-
       - name: Run Playwright tests
-        run: xvfb-run npx playwright test
-        working-directory: client
+        run: docker-compose --profile test -f docker-compose.ci.yaml up -d
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload Playwright report
+        uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
-          path: playwright-report/
+          path: client/playwright-report/
+          retention-days: 30
+
+      - name: Upload Playwright test results
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: test-results
+          path: client/test-results/
           retention-days: 30
 
   lint:
