--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -112,6 +112,59 @@ jobs:
           path: client/test-results/
           retention-days: 30
 
+  kdt-ui-tests:
+    name: Run UI Tests with Cucumber
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Create .env file
+        run: |
+          echo "BACKEND_HOST=${{ secrets.BACKEND_HOST }}" >> .env
+          echo "BACKEND_PORT=${{ secrets.BACKEND_PORT }}" >> .env
+          echo "BACKEND_UPLOADED_BOOKS_PATH=${{ secrets.BACKEND_UPLOADED_BOOKS_PATH }}" >> .env
+          echo "BACKEND_UPLOADED_THUMBNAILS_PATH=${{ secrets.BACKEND_UPLOADED_THUMBNAILS_PATH }}" >> .env
+          echo "BACKEND_JWT_SECRET_KEY=${{ secrets.BACKEND_JWT_SECRET_KEY }}" >> .env
+          echo "BACKEND_JWT_EXPIRES_IN=${{ secrets.BACKEND_JWT_EXPIRES_IN }}" >> .env
+          echo "BACKEND_GOOGLE_CLIENT_ID=${{ secrets.BACKEND_GOOGLE_CLIENT_ID }}" >> .env
+          echo "BACKEND_GOOGLE_CLIENT_SECRET=${{ secrets.BACKEND_GOOGLE_CLIENT_SECRET }}" >> .env
+          echo "FRONTEND_HOST=${{ secrets.FRONTEND_HOST }}" >> .env
+          echo "FRONTEND_PORT=${{ secrets.FRONTEND_PORT }}" >> .env
+          echo "MONGO_HOST=${{ secrets.MONGO_HOST }}" >> .env
+          echo "MONGO_PORT=${{ secrets.MONGO_PORT }}" >> .env
+          echo "MONGO_DB=${{ secrets.MONGO_DB }}" >> .env
+          echo "MONGO_USER=${{ secrets.MONGO_USER }}" >> .env
+          echo "MONGO_PASS=${{ secrets.MONGO_PASS }}" >> .env
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Build and start containers
+        run: docker-compose -f docker-compose.ci.yaml up -d
+
+      - name: Run Playwright tests
+        run: docker-compose -f docker-compose.ci.yaml --profile kdt-test up --exit-code-from kdt-ui-tests
+
+      - name: Stop all containers
+        run: docker-compose -f docker-compose.ci.yaml down
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: kdt-ui-test-results
+          path: kdt-tests/test-results/
+          retention-days: 30
+
   lint:
     name: Run ESLint
     runs-on: ubuntu-latest
